--- a/main.tex
+++ b/main.tex
@@ -121,10 +121,10 @@ m n\\
 
 \tableofcontents
 \listoffigures
-%\include{chapter1}
-%\include{chapter2}
+\include{chapter1}
+\include{chapter2}
 \include{chapter3}
-%\include{chapter4}
+\include{chapter4}
 %\include{chapter5}
 \printbibliography %Prints bibliography
 \end{document}
